--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       rel="stylesheet"
     />
   </head>
-  <body>
     <header id="header">
       <nav class="container">
         <h1><a class="logo title" href="#">zarkom<span>store</span>.</a></h1>
@@ -40,7 +39,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="scrollmain">
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -52,7 +51,7 @@
           <div class="text">
             <h2 class="title">Os melhores sneakers de primeira linha</h2>
             <p>Uma loja especializada em importação de sneakers</p>
-            <a class="button" href="#">Contate-nos</a>
+            <a class="button" target="_blank" href="#">Contate-nos</a>
           </div>
         </div>
       </section>
@@ -210,8 +209,9 @@
           <div class="text">
             <h2 class="title">Entre em contato com a gente!</h2>
             <p>
-              Quer ver nosso catálogo? Nos envie uma mensagem através do WhatsApp (ou e-mail)
-              <br>
+              Quer ver nosso catálogo? Nos envie uma mensagem através do
+              WhatsApp (ou e-mail)
+              <br />
               Queremos ouvir suas críticas e sugestões nos envie uma mensagem!:)
             </p>
             <a
@@ -233,6 +233,7 @@
       </section>
     </main>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
 </html>
