Adicionando o final da pagina

--- a/index.html
+++ b/index.html
@@ -230,8 +230,27 @@
             </ul>
           </div>
         </div>
-      </section>
-    </main>
+        </section>
+        <footer>
+          <div class="container grid">
+            <div class="brand">
+              <a class="logo title" href="#">zarkom<span>store</span>.</a>
+              <p>©2022 ZarkomStore.</p>
+            </div>
+              <div class="social">
+               <a href="">
+              <i class="icon"></i>
+              </a>
+              <a href="">
+                <i class="icon"></i>
+              </a>
+              <a href="">
+                <i class="icon"></i>
+              </a>
+            </div>
+          </div>
+        </footer>
+      </main>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
